[gd_scene load_steps=9 format=3 uid="uid://chkxf1jcdklm5"]

[ext_resource type="Script" path="res://scripts/apple_tree.gd" id="1_i6daa"]
[ext_resource type="Resource" uid="uid://dcruv0606py6b" path="res://inventory/inv_items/apple_item.tres" id="2_f4c5d"]
[ext_resource type="Texture2D" uid="uid://cofurbgw6vlw3" path="res://objectSprites/hTreeApple.png" id="2_g7ai1"]
[ext_resource type="Texture2D" uid="uid://br6punqnwgx56" path="res://objectSprites/hTree.png" id="3_to6tk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_75ud1"]
atlas = ExtResource("2_g7ai1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y8rb"]
atlas = ExtResource("3_to6tk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bdjwx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75ud1")
}],
"loop": true,
"name": &"apples",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y8rb")
}],
"loop": true,
"name": &"no apples",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vnpuk"]
radius = 22.0

[node name="apple_tree" type="Node2D"]
script = ExtResource("1_i6daa")
item = ExtResource("2_f4c5d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_bdjwx")
animation = &"apples"

[node name="pickable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_vnpuk")

[node name="growth_timer" type="Timer" parent="."]
wait_time = 9.0
one_shot = true

[node name="Marker_one" type="Marker2D" parent="."]
position = Vector2(-5, 3)

[node name="Marker_two" type="Marker2D" parent="."]
position = Vector2(1, 0)

[node name="Marker_three" type="Marker2D" parent="."]
position = Vector2(4, 5)

[node name="appleHolder" type="Node" parent="."]

[connection signal="body_entered" from="pickable_area" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="pickable_area" to="." method="_on_pickable_area_body_exited"]
[connection signal="timeout" from="growth_timer" to="." method="_on_growth_timer_timeout"]
